@@ -1,3 +1,6 @@
+2006-10-26  Jeremy Cribb <jcribb@email.unc.edu>
+	* remove_drift.m: function now terminates gracefully when input is empty.
+
 2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
 	* remove_drift.m: turns out that those diff tags were not the only thing cvs added to my file because of a conflict.  It copied the entire function.  This confused me until Kalpit set me straight.  Everything should be functioning correctly now (har har).
 
